--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,20 +12,32 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_settings">Settings</string>
 
-    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
+    <string name="lorem_ipsum_title">Lorem Ipsum</string>
     <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
-        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
+        typesetting industry. Lorem Ipsum has been the industrys standard placeholder text ever
         since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-        type specimen book"</string>
+        type specimen book</string>
     <string name="fab_content_description">Represents a view to invoke an action</string>
     <string name="image_view_item_transform_content_description">Represents an image view in the
         item
     </string>
     <string name="menu_home">Home</string>
-    <string name="menu_about">About</string>
+    <string name="menu_about">About Us</string>
     <string name="menu_grants">Grants</string>
     <string name="menu_education">Education</string>
-    <string name="menu_contact">Contact</string>
+    <string name="menu_contact">Contact Us</string>
     <string name="open_local_pdf">Open Local PDF</string>
     <string name="logo_description">App Logo</string>
+
+    <string name="who_we_are">WHO WE ARE</string>
+    <string name="about_us_title">ABOUT US</string>
+    <string name="about_us_text">AFSCME Child Care Providers Together is the union for Oregons family child care providers. We know Oregon doesnt work without child care, and we connect families with union child care providers across Oregon. Families choose to find child care through AFSCME-CCPT because our member providers offer high-quality, developmentally appropriate, affordable care. When providers join us, they dont just enjoy the benefits of joining a union — they join a network of union families across the state.</string>
+    <string name="what_our_members_say_title">WHAT OUR MEMBERS SAY:</string>
+    <string name="member_1_quote">"I am Registered family daycare which allows me to care for a maximum of 10 children. I am a member of Oregon Child Care Providers Together because it is smaller family child care homes that provide specialized and individualized care, who need to be supported so we can grow our business or feel supported as a business owner."</string>
+    <string name="member_1_name">- Rachael Lamet</string>
+    <string name="member_2_quote">"We call our program, not a daycare, not a business but our labor of love. Love is the main reason why we do what we do. Our goal is not only to be the child care providers but to be like a second family to our children. We joined the union because in difficult times we know they have our backs!"</string>
+    <string name="member_2_name">- Ali &amp; Brenda Sanz</string>
+    <string name="member_3_quote">"Our certified family facility provides 24/7 care for infants, toddlers, preschoolers and school-aged children. We work hard to meet families needs and the needs of the children we care for. The union provides many training sessions, free to our members, so we and our staff can meet our training requirements to remain licensed and to always be improving our quality of care."</string>
+    <string name="member_3_name">- Anita Bates &amp; James Hunter</string>
+    <string name="privacy_policy">Privacy Policy | Politica de Privacidad</string>
 </resources>
