--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">OCCPT</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -14,7 +15,7 @@
 
     <string name="lorem_ipsum_title">Lorem Ipsum</string>
     <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
-        typesetting industry. Lorem Ipsum has been the industrys standard placeholder text ever
+        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
         since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
         type specimen book</string>
     <string name="fab_content_description">Represents a view to invoke an action</string>
@@ -23,15 +24,18 @@
     </string>
     <string name="menu_home">Home</string>
     <string name="menu_about">About Us</string>
-    <string name="menu_grants">Grants</string>
-    <string name="menu_education">Education</string>
+    <string name="menu_find_child_care">Find Child Care</string>
+    <string name="menu_grants">Resources</string>
+    <string name="menu_education">Join AFSCME</string>
     <string name="menu_contact">Contact Us</string>
     <string name="open_local_pdf">Open Local PDF</string>
     <string name="logo_description">App Logo</string>
 
     <string name="who_we_are">WHO WE ARE</string>
     <string name="about_us_title">ABOUT US</string>
-    <string name="about_us_text">AFSCME Child Care Providers Together is the union for Oregons family child care providers. We know Oregon doesnt work without child care, and we connect families with union child care providers across Oregon. Families choose to find child care through AFSCME-CCPT because our member providers offer high-quality, developmentally appropriate, affordable care. When providers join us, they dont just enjoy the benefits of joining a union — they join a network of union families across the state.</string>
+    <string name="about_us_text">
+        AFSCME Child Care Providers Together is the union for Oregon\'s family child care providers. We know Oregon doesn\'t work without child care, and we connect families with union child care providers across Oregon. Families choose to find child care through AFSCME-CCPT because our member providers offer <![CDATA[<a href="find_child_care">high-quality, developmentally appropriate, affordable care</a>]]>. When providers join us, they don\'t just enjoy the benefits of joining a union — they join a network of union families across the state.
+    </string>
     <string name="what_our_members_say_title">WHAT OUR MEMBERS SAY:</string>
     <string name="member_1_quote">"I am Registered family daycare which allows me to care for a maximum of 10 children. I am a member of Oregon Child Care Providers Together because it is smaller family child care homes that provide specialized and individualized care, who need to be supported so we can grow our business or feel supported as a business owner."</string>
     <string name="member_1_name">- Rachael Lamet</string>
