Working on Login Page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="action_register">Register</string>
     <string name="action_profile">Profile</string>
     <string name="action_logout">Log Out</string>
+    <string name="menu_login">Login</string>
 
 </resources>
