Start of the Focus Union App-  Added two buttons on main page for Staff and joining union

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,9 @@
     <string name="member_3_name">- Anita Bates &amp; James Hunter</string>
     <string name="privacy_policy">Privacy Policy | Politica de Privacidad</string>
 
+    <string name="our_officers_staff">Our Officers &amp; Staff</string>
+    <string name="join_the_union">Join the Union</string>
+
     <string name="join_afscme_title">BECOME A UNION CHILD CARE PROVIDER</string>
     <string name="join_afscme_subtitle">Learn more about how being part of Oregon Child Care Providers Together family helps to you and the families you care for. Because we know Oregon does it work with all of us!</string>
     <string name="join_afscme_button_1">REGISTERED FAMILY &amp; CERTIFIED FAMILY LICENSED PROVIDERS\nJOIN OUR UNION</string>
