Start of the Focus Union App-  Added banner at top of homepage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     </string>
     <string name="menu_home">Home</string>
     <string name="menu_about">About Us</string>
-    <string name="menu_find_child_care">Find Child Care</string>
+    <string name="menu_find_child_care">Events/Trainings</string>
     <string name="menu_resources">Resources</string>
     <string name="menu_grants">Grants</string>
     <string name="menu_education">Join AFSCME</string>
