Start of the Focus Union App- Benefits tab added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="logo_description">App Logo</string>
     <string name="overflow_menu_description">More options</string>
     <string name="benefits_title">Benefits</string>
+    <string name="healthiest_you_logo_description">HealthiestYou Logo</string>
 
     <string name="who_we_are">WHO WE ARE</string>
     <string name="about_us_title">ABOUT US</string>
