--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="overflow_menu_description">More options</string>
     <string name="benefits_title">Benefits</string>
     <string name="healthiest_you_logo_description">HealthiestYou Logo</string>
+    <string name="click_for_more_info">Click for more info</string>
 
     <string name="who_we_are">WHO WE ARE</string>
     <string name="about_us_title">ABOUT US</string>
