Start of the Focus Union App- HealthiesYou logo and link working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="benefits_title">Benefits</string>
     <string name="healthiest_you_logo_description">HealthiestYou Logo</string>
     <string name="click_for_more_info">Click for more info</string>
+    <string name="click_for_faqs">Click here for FAQ\'s</string>
 
     <string name="who_we_are">WHO WE ARE</string>
     <string name="about_us_title">ABOUT US</string>
